# Route-Backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.build.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_credits.py  003_add_upgrade_tracking.py  004_add_prompt_response_storage.py  005_add_admin_audit_logs.py  006_add_custom_plan_keys.py  007_add_custom_plan_names.py
apps/api/: main.py
apps/api/api/v1/: router.py  schemas.py
apps/api/core/: __init__.py  config.py  middleware.py  otp.py  plans.py  rate_limiter.py  security.py  turnstile.py
apps/api/services/: health.py  request_context.py
apps/api/services/auth_service/: __init__.py  service.py
apps/api/services/cache/: __init__.py  redis.py
apps/api/services/credit/: __init__.py  service.py
apps/api/services/email/: service.py
apps/api/services/llm/: __init__.py  anthropic_adapter.py  base.py  router.py  transforms.py
apps/worker/: __main__.py  main.py
apps/worker/scripts/: check_new_users.py
apps/worker/tasks/: __init__.py  discord.py  main.py
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml  nginx.conf
scripts/: dev.sh  start.sh
tests/unit/: test_anthropic_adapter.py  test_anthropic_endpoint_stream.py  test_auth_middleware.py  test_chat_request_compat.py  test_chat_stream_usage.py  test_cookie_auth_helpers.py  test_message_truncation.py  test_models_endpoint.py  test_multimodal_transforms.py  test_opencode_provider_keys.py  test_request_manager.py  test_router_stream_content.py
(+19 files in other folders)
